<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.taylor.cs3270a8.CourseEditFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/l_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_id" />

            <EditText
                android:id="@+id/i_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/l_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_name" />

            <EditText
                android:id="@+id/i_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"/>

            <TextView
                android:id="@+id/l_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_course" />

            <EditText
                android:id="@+id/i_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"/>

            <TextView
                android:id="@+id/l_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_start" />

            <EditText
                android:id="@+id/i_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/l_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_end" />

            <EditText
                android:id="@+id/i_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@android:drawable/ic_menu_save" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
